--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -25,10 +25,10 @@ shape = "Block"
 TERM = "xterm-256color"
 
 [font]
-size = 18
+size = 14
 
 [font.bold]
-family = "JetBrainsMono Nerd Font"
+family = "FiraCode Nerd Font"
 style = "Bold"
 
 [font.glyph_offset]
@@ -36,11 +36,11 @@ x = 0
 y = 0
 
 [font.italic]
-family = "JetBrainsMono Nerd Font"
+family = "FiraCode Nerd Font"
 
 [font.normal]
-family = "JetBrainsMono Nerd Font"
-style = "Regular"
+family = "FiraCode Nerd Font"
+# style = "Regular"
 
 [font.offset]
 x = 0
