--- a/.config/oh-my-posh/config.toml
+++ b/.config/oh-my-posh/config.toml
@@ -1,160 +1,101 @@
-final_space = true
 version = 3
 
 [[blocks]]
-alignment = "right"
+alignment = "left"
 type = "prompt"
+newline = true
 
   [[blocks.segments]]
-  background = "#29315A"
-  foreground = "#3EC669"
-  leading_diamond = ""
-  style = "diamond"
-  template = " {{ .Path }}"
-  trailing_diamond = ""
+  foreground = "#77E4F7"
+  style = "plain"
+  template = "{{ .Path }} "
   type = "path"
 
     [blocks.segments.properties]
-    style = "folder"
+    style = "full"
 
   [[blocks.segments]]
-  background = "#29315A"
-  foreground = "#43CCEA"
-  leading_diamond = " "
-  style = "diamond"
-  template = "{{ .HEAD }}"
-  trailing_diamond = ""
+  foreground = "#FFE700"
+  style = "plain"
   type = "git"
-
-    [blocks.segments.properties]
-    branch_icon = ""
-
-  [[blocks.segments]]
-  background = "#29315A"
-  foreground = "#E4F34A"
-  leading_diamond = " "
-  style = "diamond"
-  template = "{{ if .Error }}{{ .Error }}{{ else }}{{ if .Venv }}{{ .Venv }} {{ end }}{{ .Full }}{{ end }}"
-  trailing_diamond = ""
-  type = "python"
-
-    [blocks.segments.properties]
-    fetch_version = false
+  template = "{{ .HEAD }}{{ if or (.Working.Changed) (.Staging.Changed) }}*{{ end }} <cyan>{{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{end}}</> "
+  
+	[blocks.segments.properties]
+    fetch_status = true
+	commit_icon = "@"
 
   [[blocks.segments]]
-  background = "#29315A"
+  foreground_templates = [
+	"{{if gt .Code 0}}red{{end}}",
+	"{{if eq .Code 0}}#43D426{{end}}",
+  ]
+  style = "plain"
+  template = "❯ "
+  type = "text"
+
+[[blocks]]
+type = "rprompt"
+
+  [[blocks.segments]]
+  foreground = "#b497d6"
+  style = "plain"
+  template = " {{ if .Error }}{{ .Error }}{{ else }}{{ .Full }}{{ end }} "
+  type = "elixir"
+
+    [blocks.segments.properties]
+    cache_duration = "24h"
+
+  [[blocks.segments]]
   foreground = "#7FD5EA"
-  leading_diamond = " "
-  style = "diamond"
-  template = "{{ if .Error }}{{ .Error }}{{ else }}{{ .Full }}{{ end }}"
-  trailing_diamond = ""
+  style = "plain"
+  template = "\ue626 {{ if .Error }}{{ .Error }}{{ else }}{{ .Full }}{{ end }} "
   type = "go"
 
     [blocks.segments.properties]
-    fetch_version = false
+    cache_duration = "24h"
 
   [[blocks.segments]]
-  background = "#29315A"
   foreground = "#42E66C"
-  leading_diamond = " "
-  style = "diamond"
-  template = "{{ if .PackageManagerIcon }}{{ .PackageManagerIcon }} {{ end }}{{ .Full }}"
-  trailing_diamond = ""
+  style = "plain"
+  template = "\ue718 {{ if .PackageManagerIcon }}{{ .PackageManagerIcon }} {{ end }}{{ .Full }} "
   type = "node"
 
     [blocks.segments.properties]
-    fetch_version = false
+    cache_duration = "24h"
 
   [[blocks.segments]]
-  background = "#29315A"
   foreground = "#E64747"
-  leading_diamond = " "
-  style = "diamond"
-  template = "{{ if .Error }}{{ .Error }}{{ else }}{{ .Full }}{{ end }}"
-  trailing_diamond = ""
+  style = "plain"
+  template = "\ue791 {{ if .Error }}{{ .Error }}{{ else }}{{ .Full }}{{ end }} "
   type = "ruby"
 
     [blocks.segments.properties]
-    fetch_version = false
+    cache_duration = "24h"
 
   [[blocks.segments]]
-  background = "#29315A"
-  foreground = "#E64747"
-  leading_diamond = " "
-  style = "diamond"
-  template = "{{ if .Error }}{{ .Error }}{{ else }}{{ .Full }}{{ end }}"
-  trailing_diamond = ""
-  type = "java"
+  foreground = "#E4F34A"
+  style = "plain"
+  template = "\ue235 {{ if .Error }}{{ .Error }}{{ else }}{{ if .Venv }}{{ .Venv }} {{ end }}{{ .Full }}{{ end }} "
+  type = "python"
 
     [blocks.segments.properties]
-    fetch_version = false
+    cache_duration = "24h"
 
   [[blocks.segments]]
-  background = "#29315A"
-  foreground = "#9B6BDF"
-  leading_diamond = " "
-  style = "diamond"
-  template = "{{ if .Error }}{{ .Error }}{{ else }}{{ .Full }}{{ end }} "
-  trailing_diamond = ""
-  type = "julia"
-
-    [blocks.segments.properties]
-    fetch_version = false
-
-  [[blocks.segments]]
-  background = "#29315A"
-  foreground = "#9B6BDF"
-  foreground_templates = [
-  "{{if eq \"Charging\" .State.String}}#40c4ff{{end}}",
-  "{{if eq \"Discharging\" .State.String}}#ff5722{{end}}",
-  "{{if eq \"Full\" .State.String}}#4caf50{{end}}"
-]
-  leading_diamond = " "
-  style = "diamond"
-  template = "{{ if not .Error }}{{ .Icon }}{{ .Percentage }}{{ end }}{{ .Error }}"
-  trailing_diamond = ""
-  type = "battery"
-
-    [blocks.segments.properties]
-    charged_icon = " "
-    charging_icon = "⇡ "
-    discharging_icon = "⇣ "
-
-[[blocks]]
-alignment = "left"
-newline = true
-type = "prompt"
-
-  [[blocks.segments]]
-  background = "#29315A"
-  foreground = "#AEA4BF"
-  leading_diamond = ""
-  style = "diamond"
-  template = "{{ .FormattedMs }}"
-  trailing_diamond = " "
+  foreground = "#00C5C7"
+  style = "plain"
+  template = "   {{ .FormattedMs }} "
   type = "executiontime"
 
     [blocks.segments.properties]
-    style = "austin"
-    threshold = 150
+    threshold = 2000
+	style = "austin"
 
-  [[blocks.segments]]
-  background = "#29315A"
-  foreground_templates = [
-    "{{if gt .Code 0}}#ea887f{{end}}",
-	"{{if eq .Code 0}}#7FD5EA{{end}}",
-  ]
-  leading_diamond = ""
-  style = "diamond"
-  template = "❯"
-  trailing_diamond = ""
-  type = "text"
-
-  [transient_prompt]
-  background = "transparent"
-  foreground_templates = [
-    "{{if gt .Code 0}}#ea887f{{end}}",
-	"{{if eq .Code 0}}#7FD5EA{{end}}",
-  ]
-  template = "❯ "
-  type = "text"
+[transient_prompt]
+foreground_templates = [
+  "{{if gt .Code 0}}red{{end}}",
+  "{{if eq .Code 0}}#43D426{{end}}",
+]
+style = "plain"
+template = "❯ "
+type = "text"
