--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,6 +16,9 @@ bind J resize-pane -D
 bind K resize-pane -U
 bind L resize-pane -R
 
+bind -n C-j resize-pane -D 5
+bind -n C-k resize-pane -U 5
+
 # Bind clearing the screen
 bind L send-keys '^L'
 
@@ -37,7 +40,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
 
 # set vi-mode
 set-window-option -g mode-keys vi
